--- a/Test/app/build.gradle
+++ b/Test/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.test.test"
+        applicationId "com.example.test"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
